<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.perspective.nishant.Perspective.OpinionFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="1">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="623dp"
                    android:layout_weight="2.10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/latest_poll"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/poll_ques"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="2">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/green"
                                android:text="@string/yes" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/red"
                                android:text="@string/no" />

                        </LinearLayout>

                        <com.github.mikephil.charting.charts.PieChart
                            android:id="@+id/pieChart_Latest"
                            android:layout_width="314dp"
                            android:layout_height="307dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/poll_result"
                            android:scaleX="0.75"
                            android:scaleY="0.75" />

                        <Button
                            android:text="@string/related_story"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/light_blue"
                            android:onClick="onClickStartNews"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

</ScrollView>
